.provarCaches/00D6C0000000xA6UAI/objects/zkmulti__MCCustom_Address_Source__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Auto_Create_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Auto_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Auto_Ship_Carrier_Field__c</fullName>
        <label>Auto Ship Carrier Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Auto_Ship_Service_Type_Field__c</fullName>
        <label>Auto Ship Service Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Account_Number_Field__c</fullName>
        <label>Billing Account  Number Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_City_Field__c</fullName>
        <label>Billing City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Company_Name_Field__c</fullName>
        <label>Billing Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Country_Field__c</fullName>
        <label>Billing Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Email_Field__c</fullName>
        <label>Billing Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Name_Field__c</fullName>
        <label>Billing Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Phone_Field__c</fullName>
        <label>Billing Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Postal_Code_Field__c</fullName>
        <label>Billing Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_State_Field__c</fullName>
        <label>Billing State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Street_Field__c</fullName>
        <label>Billing Street Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__BrandingField__c</fullName>
        <label>Branding Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Code_Default__c</fullName>
        <label>Carrier Code Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Child_Customs_Item_Filter__c</fullName>
        <label>Child Product Filter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Child_Customs_Item_Object_Name__c</fullName>
        <label>Child Product Object Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Child_Customs_Item_Parent_Field__c</fullName>
        <label>Child Product Parent Field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Child_Customs_Item_Parent_Lookup_Field__c</fullName>
        <label>Child Product Parent Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Child_Package_Filter__c</fullName>
        <label>Child Package Filter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Child_Package_Object_Name__c</fullName>
        <label>Child Package Object Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Child_Package_Parent_Field__c</fullName>
        <label>Child Package Parent Field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Child_Package_Parent_Lookup_Field__c</fullName>
        <label>Child Package Parent Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__City_Field__c</fullName>
        <label>City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CommercialInvoiceField__c</fullName>
        <description>SF object Id</description>
        <inlineHelpText>SF object Id</inlineHelpText>
        <label>Commercial Invoice Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Company_Name_Field__c</fullName>
        <label>Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contents_Explanation_Field__c</fullName>
        <label>Contents Explanation Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contents_Type_Field__c</fullName>
        <label>Contents Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Country_Field__c</fullName>
        <label>Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Custom_Address_Source_Object__c</fullName>
        <label>Custom Address Source Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Custom_Address_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Address Source (Return Shipment)</label>
        <referenceTo>zkmulti__MCCustom_Address_Source__c</referenceTo>
        <relationshipLabel>Custom Address Sources</relationshipLabel>
        <relationshipName>Custom_Address_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__CustomsItemObjectLookupField__c</fullName>
        <label>Product Object Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Customs_Certify_Field__c</fullName>
        <label>Customs Certify Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Customs_Signer_Field__c</fullName>
        <label>Customs Signer Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DateField__c</fullName>
        <label>Date Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Delivered_By_Field__c</fullName>
        <label>Delivered By Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dimension_Units_Field__c</fullName>
        <label>Dimension Units Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EEIFromField__c</fullName>
        <description>SF object Id</description>
        <inlineHelpText>SF object Id</inlineHelpText>
        <label>EEI From Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EEL_PFC_Field__c</fullName>
        <label>EEL or PFC Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Email_Field__c</fullName>
        <label>Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Error_Message_Field__c</fullName>
        <label>Error Message Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Height_Field__c</fullName>
        <label>Height Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__InternationalServiceTypeField__c</fullName>
        <label>International Service Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Cheapest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cheapest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Fastest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fastest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Residence_Field__c</fullName>
        <label>Is Residence Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Label_Image_Type_Field__c</fullName>
        <label>Label Image Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Length_Field__c</fullName>
        <label>Length Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NAFTACOField__c</fullName>
        <description>SF object Id</description>
        <inlineHelpText>SF object Id</inlineHelpText>
        <label>USMCA CO Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Name_Field__c</fullName>
        <label>Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Non_Delivery_Field__c</fullName>
        <label>Non Delivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Origin_Custom_Address_Source_Id_Field__c</fullName>
        <label>Origin Custom Address Source Id Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OutputDeliveryDateField__c</fullName>
        <label>Output Delivery Date Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OutputDeliveryDayOfWeekField__c</fullName>
        <label>Output Delivery Day Of Week Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OutputDeliveryDaysField__c</fullName>
        <label>Output Delivery Days Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OutputNetCharge__c</fullName>
        <label>Output Net Charge</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OutputPreferenceIdField__c</fullName>
        <label>Output Preference Id Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OutputServiceNameField__c</fullName>
        <label>Output Service Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackageBoxingAlgorithm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package Boxing Algorithm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackageObjectLookupField__c</fullName>
        <label>Package Object Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Type_Field__c</fullName>
        <label>Package Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Payment_Type_Field__c</fullName>
        <label>Payment Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Phone_Field__c</fullName>
        <label>Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Postal_Code_Field__c</fullName>
        <label>Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Preference_Name_Field__c</fullName>
        <label>Preference Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProFormaInvoiceField__c</fullName>
        <description>SF object Id</description>
        <inlineHelpText>SF object Id</inlineHelpText>
        <label>Pro Forma Invoice Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference_Field__c</fullName>
        <label>Reference Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Restriction_Comments_Field__c</fullName>
        <label>Restriction Comments Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Restriction_Type_Field__c</fullName>
        <label>Restriction Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Shipment_Field__c</fullName>
        <label>Return Shipment Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_City_Field__c</fullName>
        <label>Sender City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Company_Name_Field__c</fullName>
        <label>Sender Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Country_Field__c</fullName>
        <label>Sender Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Email_Field__c</fullName>
        <label>Sender Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Is_Residence_Field__c</fullName>
        <label>Sender Is Residence Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Name_Field__c</fullName>
        <label>Sender Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Phone_Field__c</fullName>
        <label>Sender Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Postal_Code_Field__c</fullName>
        <label>Sender Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_State_Field__c</fullName>
        <label>Sender State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Street_1_Text_Line_Field__c</fullName>
        <label>Sender Street 1 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Street_2_Text_Line_Field__c</fullName>
        <label>Sender Street 2 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Street_Text_Area_Field__c</fullName>
        <label>Sender Street Text Area Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ServiceTypeField__c</fullName>
        <label>Service Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ShipmentTypeField__c</fullName>
        <label>Shipment Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment_Object_Lookup_Field__c</fullName>
        <label>Shipment Object Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__State_Field__c</fullName>
        <label>State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Street_1_Text_Line_Field__c</fullName>
        <label>Street 1 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Street_2_Text_Line_Field__c</fullName>
        <label>Street 2 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Street_Text_Area_Field__c</fullName>
        <label>Street Text Area Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Field__c</fullName>
        <label>Weight Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units_Field__c</fullName>
        <label>Weight Units Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Width_Field__c</fullName>
        <label>Width Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__WizardMode__c</fullName>
        <label>Wizard Mode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Custom Address Source</label>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>